p2/manifests/app_test/service.yml
apiVersion: v1
kind: Service
metadata:
  name: app-svc
spec:
  selector:
    app: app
  ports:
  - name: http
    port: 80
    targetPort: 80
  type: ClusterIP
